// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storyshots components/store/ColumnForm Single select column 1`] = `
<div
  style="height: 100%;"
>
  <div>
    <h1
      class="lck-color-primary"
    >
      Edit the column
    </h1>

    <p>

    </p>

    <div
      class="column-form-container lck-color-content"
    >
      <h2
        class="lck-color-title"
      >
        Global configuration
      </h2>

      <span>
        <form
          class="p-fluid"
        >
          <div
            class="p-field"
          >
            <label
              class="label-field-required"
              for="columnTextField"
            >
              Column title
            </label>

            <input
              class="p-inputtext p-component p-filled"
              id="columnTextField"
            />

            <span
              class="untouched pristine"
            >

            </span>
          </div>

          <div>

        Validation rules

            <div
              class="p-my-2"
            >
              <div
                class="rule-container"
              >
                <div
                  class="rule-enable"
                >
                  <div
                    class="p-mr-2 p-checkbox p-component"
                  >
                    <div
                      class="p-hidden-accessible"
                    >
                      <input
                        id="required-enable"
                        name="rule-enable"
                        type="checkbox"
                        value=""
                      />
                    </div>

                    <div
                      class="p-checkbox-box"
                      role="checkbox"
                    >
                      <span
                        class="p-checkbox-icon"
                      />
                    </div>
                  </div>

                  <label
                    for="required-enable"
                  >
                    Required column
                  </label>
                </div>
              </div>
            </div>
          </div>

          <div
            class="p-mb-3"
          >
            <p>
              Column values
            </p>

            <div>
              <div
                class="p-d-flex"
              >
                <div
                  class="p-ai-start p-mb-4 p-ml-auto"
                >
                  <button
                    class="p-button-text p-button p-component"
                    type="button"
                  >
                    <span
                      class="pi pi-plus p-button-icon p-button-icon-left"
                    />

                    <span
                      class="p-button-label"
                    >
                      Add value
                    </span>

                    <!---->
                    <span
                      class="p-ink"
                    />
                  </button>
                </div>
              </div>

              <div
                class="select-type-values-table p-datatable p-component"
              >

                <!---->

                <!---->

                <!---->

                <!---->

                <!---->

                <!---->

                <!---->

                <div
                  class="p-datatable-wrapper"
                >
                  <table
                    role="grid"
                  >
                    <thead
                      class="p-datatable-thead"
                    >
                      <tr />

                      <!---->
                    </thead>

                    <tbody
                      class="p-datatable-tbody"
                    >
                      <tr
                        class="p-datatable-emptymessage"
                      >
                        <td
                          colspan="0"
                        >

      No data


                          <!---->
                        </td>
                      </tr>
                    </tbody>

                    <!---->
                  </table>
                </div>

                <!---->

                <!---->

                <div
                  class="p-column-resizer-helper"
                  style="display: none;"
                />

                <!---->

                <!---->
              </div>

              <div
                class="p-mt-2 p-fluid"
              >
                <label
                  for="default-select-type-value-id"
                >

      Default value

                </label>

                <div
                  class="p-dropdown p-component p-inputwrapper"
                  id="default-select-type-value-id"
                >
                  <div
                    class="p-hidden-accessible"
                  >
                    <input
                      aria-haspopup="listbox"
                      readonly="readonly"
                      type="text"
                    />
                  </div>

                  <!---->

                  <span
                    class="p-dropdown-label p-inputtext p-placeholder"
                  >

            Select default value

                  </span>

                  <!---->

                  <div
                    aria-haspopup="listbox"
                    class="p-dropdown-trigger"
                    role="button"
                  >
                    <span
                      class="p-dropdown-trigger-icon pi pi-chevron-down"
                    />
                  </div>

                  <!---->
                </div>
              </div>
            </div>
          </div>

          <div
            class="lck-form-footer"
          >
            <!---->

            <button
              class="p-button p-component"
              disabled="disabled"
              type="submit"
            >
              <span
                class="pi pi-save p-button-icon p-button-icon-left"
              />

              <span
                class="p-button-label"
              >
                Save
              </span>

              <!---->
              <span
                class="p-ink"
              />
            </button>
          </div>
        </form>
      </span>
    </div>

    <div
      class="column-form-container lck-color-content"
    >
      <h2
        class="lck-color-title"
      >
        Configuration for the visualization part
      </h2>

      <span>
        <form
          class="p-fluid"
        >
          <div
            class="p-field p-mb-2"
          >
            <label
              class="label-field-required"
              for="columnDisplayedField"
            >
              Displayed column
            </label>

            <div
              class="p-inputswitch p-component p-inputswitch-checked"
              id="columnDisplayedField"
            >
              <div
                class="p-hidden-accessible"
              >
                <input
                  aria-checked="true"
                  role="switch"
                  type="checkbox"
                />
              </div>

              <span
                class="p-inputswitch-slider"
              />
            </div>

            <span
              class="untouched pristine"
            >

            </span>
          </div>

          <div
            class="p-field p-mb-2"
          >
            <label
              class="label-field-required"
              for="columnEditableField"
            >
              Editable column
            </label>

            <div
              class="p-inputswitch p-component"
              id="columnEditableField"
            >
              <div
                class="p-hidden-accessible"
              >
                <input
                  role="switch"
                  type="checkbox"
                />
              </div>

              <span
                class="p-inputswitch-slider"
              />
            </div>

            <span
              class="untouched pristine"
            >

            </span>
          </div>

          <div
            class="lck-form-footer"
          >
            <!---->

            <button
              class="p-button p-component"
              disabled="disabled"
              type="submit"
            >
              <span
                class="pi pi-save p-button-icon p-button-icon-left"
              />

              <span
                class="p-button-label"
              >
                Save
              </span>

              <!---->
              <span
                class="p-ink"
              />
            </button>
          </div>
        </form>
      </span>
    </div>
  </div>
</div>
`;

exports[`storyshots components/store/ColumnForm String Column Story 1`] = `
<div
  style="height: 100%;"
>
  <div>
    <h1
      class="lck-color-primary"
    >
      Edit the column
    </h1>

    <p>

    </p>

    <div
      class="column-form-container lck-color-content"
    >
      <h2
        class="lck-color-title"
      >
        Global configuration
      </h2>

      <span>
        <form
          class="p-fluid"
        >
          <div
            class="p-field"
          >
            <label
              class="label-field-required"
              for="columnTextField"
            >
              Column title
            </label>

            <input
              class="p-inputtext p-component p-filled"
              id="columnTextField"
            />

            <span
              class="untouched pristine"
            >

            </span>
          </div>

          <div>

        Validation rules

            <div
              class="p-my-2"
            >
              <div
                class="rule-container"
              >
                <div
                  class="rule-enable"
                >
                  <div
                    class="p-mr-2 p-checkbox p-component p-checkbox-checked"
                  >
                    <div
                      class="p-hidden-accessible"
                    >
                      <input
                        id="required-enable"
                        name="rule-enable"
                        type="checkbox"
                        value=""
                      />
                    </div>

                    <div
                      aria-checked="true"
                      class="p-checkbox-box p-highlight"
                      role="checkbox"
                    >
                      <span
                        class="p-checkbox-icon pi pi-check"
                      />
                    </div>
                  </div>

                  <label
                    for="required-enable"
                  >
                    Required column
                  </label>
                </div>
              </div>
            </div>
          </div>

          <!---->

          <div
            class="lck-form-footer"
          >
            <!---->

            <button
              class="p-button p-component"
              disabled="disabled"
              type="submit"
            >
              <span
                class="pi pi-save p-button-icon p-button-icon-left"
              />

              <span
                class="p-button-label"
              >
                Save
              </span>

              <!---->
              <span
                class="p-ink"
              />
            </button>
          </div>
        </form>
      </span>
    </div>

    <div
      class="column-form-container lck-color-content"
    >
      <h2
        class="lck-color-title"
      >
        Configuration for the visualization part
      </h2>

      <span>
        <form
          class="p-fluid"
        >
          <div
            class="p-field p-mb-2"
          >
            <label
              class="label-field-required"
              for="columnDisplayedField"
            >
              Displayed column
            </label>

            <div
              class="p-inputswitch p-component p-inputswitch-checked"
              id="columnDisplayedField"
            >
              <div
                class="p-hidden-accessible"
              >
                <input
                  aria-checked="true"
                  role="switch"
                  type="checkbox"
                />
              </div>

              <span
                class="p-inputswitch-slider"
              />
            </div>

            <span
              class="untouched pristine"
            >

            </span>
          </div>

          <div
            class="p-field p-mb-2"
          >
            <label
              class="label-field-required"
              for="columnEditableField"
            >
              Editable column
            </label>

            <div
              class="p-inputswitch p-component"
              id="columnEditableField"
            >
              <div
                class="p-hidden-accessible"
              >
                <input
                  role="switch"
                  type="checkbox"
                />
              </div>

              <span
                class="p-inputswitch-slider"
              />
            </div>

            <span
              class="untouched pristine"
            >

            </span>
          </div>

          <div
            class="lck-form-footer"
          >
            <!---->

            <button
              class="p-button p-component"
              disabled="disabled"
              type="submit"
            >
              <span
                class="pi pi-save p-button-icon p-button-icon-left"
              />

              <span
                class="p-button-label"
              >
                Save
              </span>

              <!---->
              <span
                class="p-ink"
              />
            </button>
          </div>
        </form>
      </span>
    </div>
  </div>
</div>
`;

exports[`storyshots components/store/ColumnForm String column when submitting 1`] = `
<div
  style="height: 100%;"
>
  <div>
    <h1
      class="lck-color-primary"
    >
      Edit the column
    </h1>

    <p>

    </p>

    <div
      class="column-form-container lck-color-content"
    >
      <h2
        class="lck-color-title"
      >
        Global configuration
      </h2>

      <span>
        <form
          class="p-fluid"
        >
          <div
            class="p-field"
          >
            <label
              class="label-field-required"
              for="columnTextField"
            >
              Column title
            </label>

            <input
              class="p-inputtext p-component p-filled"
              id="columnTextField"
            />

            <span
              class="untouched pristine"
            >

            </span>
          </div>

          <div>

        Validation rules

            <div
              class="p-my-2"
            >
              <div
                class="rule-container"
              >
                <div
                  class="rule-enable"
                >
                  <div
                    class="p-mr-2 p-checkbox p-component p-checkbox-checked"
                  >
                    <div
                      class="p-hidden-accessible"
                    >
                      <input
                        id="required-enable"
                        name="rule-enable"
                        type="checkbox"
                        value=""
                      />
                    </div>

                    <div
                      aria-checked="true"
                      class="p-checkbox-box p-highlight"
                      role="checkbox"
                    >
                      <span
                        class="p-checkbox-icon pi pi-check"
                      />
                    </div>
                  </div>

                  <label
                    for="required-enable"
                  >
                    Required column
                  </label>
                </div>
              </div>
            </div>
          </div>

          <!---->

          <div
            class="lck-form-footer"
          >
            <!---->

            <button
              class="p-button p-component p-button-text"
              disabled="disabled"
              type="button"
            >
              <span
                class="pi pi-spin pi-spinner p-button-icon p-button-icon-left"
              />

              <span
                class="p-button-label"
              >
                Please wait
              </span>

              <!---->
              <span
                class="p-ink"
              />
            </button>
          </div>
        </form>
      </span>
    </div>

    <div
      class="column-form-container lck-color-content"
    >
      <h2
        class="lck-color-title"
      >
        Configuration for the visualization part
      </h2>

      <span>
        <form
          class="p-fluid"
        >
          <div
            class="p-field p-mb-2"
          >
            <label
              class="label-field-required"
              for="columnDisplayedField"
            >
              Displayed column
            </label>

            <div
              class="p-inputswitch p-component p-inputswitch-checked"
              id="columnDisplayedField"
            >
              <div
                class="p-hidden-accessible"
              >
                <input
                  aria-checked="true"
                  role="switch"
                  type="checkbox"
                />
              </div>

              <span
                class="p-inputswitch-slider"
              />
            </div>

            <span
              class="untouched pristine"
            >

            </span>
          </div>

          <div
            class="p-field p-mb-2"
          >
            <label
              class="label-field-required"
              for="columnEditableField"
            >
              Editable column
            </label>

            <div
              class="p-inputswitch p-component"
              id="columnEditableField"
            >
              <div
                class="p-hidden-accessible"
              >
                <input
                  role="switch"
                  type="checkbox"
                />
              </div>

              <span
                class="p-inputswitch-slider"
              />
            </div>

            <span
              class="untouched pristine"
            >

            </span>
          </div>

          <div
            class="lck-form-footer"
          >
            <!---->

            <button
              class="p-button p-component p-button-text"
              disabled="disabled"
              type="button"
            >
              <span
                class="pi pi-spin pi-spinner p-button-icon p-button-icon-left"
              />

              <span
                class="p-button-label"
              >
                Please wait
              </span>

              <!---->
              <span
                class="p-ink"
              />
            </button>
          </div>
        </form>
      </span>
    </div>
  </div>
</div>
`;
